--- a/.travis.yml
+++ b/.travis.yml
@@ -71,6 +71,7 @@ install:
        pip install -r requirements.txt
     fi
   - pip install -r test-requirements.txt
+  - pip install git+git://github.com/NSLS-II/caproto.git
   - python setup.py develop
   # set up directories we will need
   - python -c "import ophyd.utils.paths as oup; import datetime; now = datetime.datetime.now(); [oup.make_dir_tree(now.year + j, base_path='/tmp/data') for j in [-1, 0, 1]]"
@@ -94,7 +95,7 @@ script:
 
 
   # running tests
-  - python run_tests.py --cov=ophyd --cov-report term-missing
+  - OPHYD_CONTROL_LAYER=caproto python run_tests.py --cov=ophyd --cov-report term-missing
 
   - set -e
   # Build docs.
