--- a/.travis.yml
+++ b/.travis.yml
@@ -99,7 +99,7 @@ script:
 
 
   # running tests
-  - python run_tests.py --cov=ophyd --cov-report term-missing
+  - python run_tests.py -v --cov=ophyd --cov-report term-missing
 
   - set -e
   # Build docs.
